feat: add suporte para espanhol e frances

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,6 +19,8 @@
   "languageSubtitle": "Choose the app language",
   "languagePortuguese": "Portuguese (Brazil)",
   "languageEnglish": "English",
+  "languageSpanish": "Spanish",
+  "languageFrench": "French",
   "languageSystem": "Use system language",
   "chooseLanguageTitle": "Language",
   "editProductTitle": "Edit Product",
