--- a/lib/l10n/app_pt_BR.arb
+++ b/lib/l10n/app_pt_BR.arb
@@ -19,6 +19,8 @@
   "languageSubtitle": "Escolha o idioma do app",
   "languagePortuguese": "Português (Brasil)",
   "languageEnglish": "Inglês",
+  "languageSpanish": "Espanhol",
+  "languageFrench": "Francês",
   "languageSystem": "Usar idioma do sistema",
   "chooseLanguageTitle": "Idioma",
   "editProductTitle": "Editar Produto",
