feat: suporte a diversos outros idiomas

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,6 +21,14 @@
   "languageEnglish": "English",
   "languageSpanish": "Spanish",
   "languageFrench": "French",
+  "languageGerman": "German",
+  "languageItalian": "Italian",
+  "languageJapanese": "Japanese",
+  "languageKorean": "Korean",
+  "languagePolish": "Polish",
+  "languageRussian": "Russian",
+  "languageChineseSimplified": "Chinese (Simplified)",
+  "languageChineseTraditional": "Chinese (Traditional)",
   "languageSystem": "Use system language",
   "chooseLanguageTitle": "Language",
   "editProductTitle": "Edit Product",
