--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -21,6 +21,14 @@
   "languageEnglish": "Inglés",
   "languageSpanish": "Español",
   "languageFrench": "Francés",
+  "languageGerman": "Alemán",
+  "languageItalian": "Italiano",
+  "languageJapanese": "Japonés",
+  "languageKorean": "Coreano",
+  "languagePolish": "Polaco",
+  "languageRussian": "Ruso",
+  "languageChineseSimplified": "Chino (Simplificado)",
+  "languageChineseTraditional": "Chino (Tradicional)",
   "languageSystem": "Usar idioma del sistema",
   "chooseLanguageTitle": "Idioma",
   "editProductTitle": "Editar Producto",
