--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -21,6 +21,14 @@
   "languageEnglish": "Anglais",
   "languageSpanish": "Espagnol",
   "languageFrench": "Français",
+  "languageGerman": "Allemand",
+  "languageItalian": "Italien",
+  "languageJapanese": "Japonais",
+  "languageKorean": "Coréen",
+  "languagePolish": "Polonais",
+  "languageRussian": "Russe",
+  "languageChineseSimplified": "Chinois (simplifié)",
+  "languageChineseTraditional": "Chinois (traditionnel)",
   "languageSystem": "Utiliser la langue du système",
   "chooseLanguageTitle": "Langue",
   "editProductTitle": "Modifier le produit",
