--- a/lib/l10n/app_pt_BR.arb
+++ b/lib/l10n/app_pt_BR.arb
@@ -21,6 +21,14 @@
   "languageEnglish": "Inglês",
   "languageSpanish": "Espanhol",
   "languageFrench": "Francês",
+  "languageGerman": "Alemão",
+  "languageItalian": "Italiano",
+  "languageJapanese": "Japonês",
+  "languageKorean": "Coreano",
+  "languagePolish": "Polonês",
+  "languageRussian": "Russo",
+  "languageChineseSimplified": "Chinês (Simplificado)",
+  "languageChineseTraditional": "Chinês (Tradicional)",
   "languageSystem": "Usar idioma do sistema",
   "chooseLanguageTitle": "Idioma",
   "editProductTitle": "Editar Produto",
