--- a/lib/l10n/app_pt_BR.arb
+++ b/lib/l10n/app_pt_BR.arb
@@ -101,6 +101,12 @@
   "salaryInputRequired": "Por favor, insira um valor",
   "salaryInputInvalid": "Por favor, insira um valor válido",
   "salarySaved": "Salário salvo!",
+  "importPreviousMonthTitle": "Importar do Mês Anterior",
+  "importPreviousMonthTooltip": "Importar produtos do mês anterior",
+  "noPreviousMonthProducts": "Nenhum produto encontrado no mês anterior",
+  "close": "Fechar",
+  "selectAll": "Selecionar Todos",
+  "productsImported": "Produtos importados",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
