--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -101,6 +101,12 @@
   "salaryInputRequired": "Пожалуйста, введите значение",
   "salaryInputInvalid": "Пожалуйста, введите правильное значение",
   "salarySaved": "Зарплата сохранена!",
+  "importPreviousMonthTitle": "Импорт из Прошлого Месяца",
+  "importPreviousMonthTooltip": "Импортировать товары из прошлого месяца",
+  "noPreviousMonthProducts": "Товары за прошлый месяц не найдены",
+  "close": "Закрыть",
+  "selectAll": "Выбрать все",
+  "productsImported": "Товары импортированы",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
