feat: selecao multipla para exclusao

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -107,6 +107,11 @@
   "close": "Schließen",
   "selectAll": "Alle auswählen",
   "productsImported": "Produkte importiert",
+  "selectItemsToDelete": "Elemente zum Löschen auswählen",
+  "selected": "ausgewählt",
+  "deleteConfirmTitle": "Löschung bestätigen",
+  "deleteMultipleConfirmMessage": "Möchten Sie löschen",
+  "itemsDeleted": "Elemente gelöscht!",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
