--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -107,6 +107,11 @@
   "close": "Close",
   "selectAll": "Select All",
   "productsImported": "Products imported",
+  "selectItemsToDelete": "Select items to delete",
+  "selected": "selected",
+  "deleteConfirmTitle": "Confirm deletion",
+  "deleteMultipleConfirmMessage": "Do you want to delete",
+  "itemsDeleted": "Items deleted!",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
