--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -107,6 +107,11 @@
   "close": "닫기",
   "selectAll": "모두 선택",
   "productsImported": "제품이 가져와졌습니다",
+  "selectItemsToDelete": "삭제할 항목 선택",
+  "selected": "선택됨",
+  "deleteConfirmTitle": "삭제 확인",
+  "deleteMultipleConfirmMessage": "삭제하시겠습니까",
+  "itemsDeleted": "항목이 삭제되었습니다!",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
