--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -107,6 +107,11 @@
   "close": "Zamknij",
   "selectAll": "Zaznacz wszystko",
   "productsImported": "Produkty zaimportowane",
+  "selectItemsToDelete": "Wybierz elementy do usunięcia",
+  "selected": "wybrane",
+  "deleteConfirmTitle": "Potwierdź usunięcie",
+  "deleteMultipleConfirmMessage": "Czy chcesz usunąć",
+  "itemsDeleted": "Elementy usunięte!",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
