--- a/lib/l10n/app_zh_Hans.arb
+++ b/lib/l10n/app_zh_Hans.arb
@@ -112,6 +112,11 @@
   "deleteConfirmTitle": "确认删除",
   "deleteMultipleConfirmMessage": "您要删除",
   "itemsDeleted": "项目已删除！",
+  "storeLabel": "商店（可选）",
+  "storeHint": "例如：市场 X、药店 Y",
+  "storeAnalyticsTitle": "您花费最多的地方",
+  "storeAnalyticsSubtitle": "按商店分析支出",
+  "averageLabel": "平均",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
